@@ -1602,6 +1602,9 @@ printf (
 		"--realvideo                Enable real video display - for Spectrum (rainbow and other advanced effects) and ZX80/81 (non standard & hi-res modes)\n"
 		"--no-detect-realvideo      Disable real video autodetection\n"
 
+		"--tbblue-legacy-hicolor    Allow legacy hi-color effects on pixel/attribute display zone\n"
+		"--tbblue-legacy-border     Allow legacy border effects on tbblue machine\n"
+
 		//"--tsconf-fast-render       Enables fast render of Tiles and Sprites for TSConf. Uses less host cpu but it's less realistic: doesn't do scanline render but full frame render\n"
 
 		"--snoweffect               Enable snow effect support for Spectrum\n"
@@ -6453,6 +6456,15 @@ int parse_cmdline_options(void) {
 			else if (!strcmp(argv[puntero_parametro],"--no-detect-realvideo")) {
 				autodetect_rainbow.v=0;
 			}
+
+			else if (!strcmp(argv[puntero_parametro],"--tbblue-legacy-hicolor")) {
+				tbblue_store_scanlines.v=1;
+			}
+
+			else if (!strcmp(argv[puntero_parametro],"--tbblue-legacy-border")) {
+				tbblue_store_scanlines_border.v=1;
+			}
+
 
 			/*else if (!strcmp(argv[puntero_parametro],"--tsconf-fast-render")) {
 				tsconf_si_render_spritetile_rapido.v=1;
